# Tender-ERP

./: .gitignore  BUILD_WINDOWS.md  CHANGELOG.md  README.md  build_windows.bat  installer.iss  metric_to_crud_map.md  pyproject.toml  requirements.txt  setup.py  tender_erp.spec  tender_erp_win.spec
.github/workflows/: build.yml
templates/: compliance_template.xlsx  estamps_template.xlsx  firms_template.xlsx  tenders_template.xlsx
tender_erp/: __init__.py  __main__.py  app.py  cli.py  config.py  db.py  migrate.py  seed_data.py  wizard_service.py
tender_erp/models/: __init__.py  audit.py  base.py  checklist.py  compliance.py  estamp.py  firm.py  tender.py  user.py  vault.py
tender_erp/services/: __init__.py  audit.py  auth.py  backup.py  checklist.py  crypto.py  dashboard.py  import_service.py  importer.py  notifications.py  permissions.py  sample_templates.py  search.py  tender_rates.py  validators.py  vault_service.py
tender_erp/ui/: __init__.py  checklist_rules_view.py  compliance_view.py  dashboard_view.py  estamps_view.py  event_bus.py  firms_view.py  import_dialog.py  login_dialog.py  main_window.py  tenders_view.py  users_view.py  vault_view.py  widgets.py
tests/: conftest.py  test_auth.py  test_checklist.py  test_crypto.py  test_dashboard.py  test_import_service.py  test_tender_rates.py  test_validators.py  test_vault_service.py  test_wizard.py
